--- a/INSTALL
+++ b/INSTALL
@@ -189,7 +189,9 @@ Optional, but supported:
   player support (even video support with mplayer)
   The mpd support depend on python-mpd (the github python-mpd2 up-to-date version).
 - 'transset' and 'xcompmgr'for full transparency support.
-- A mixer application. I recommand alsamixer.
+- A mixer application. I recommand alsamixer on linux, it will provide both amixer
+  for the music menu and the key bindings, and alsamixer as console GUI. On FreeBSD,
+  install mixer for menu and bindings and bsdmixer for the GUI.
 - 'sudo' and 'gksudo' for running text/graphical applications as superuser and
   for reboot/shutdown options in the Exit menu
 - 'xrandr' for video mode switching
